--- a/index.html
+++ b/index.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>NAV bar</title>
-    <script
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <title>NAV bar</title>
+  <script
       src="https://kit.fontawesome.com/2d323a629b.js"
       crossorigin="anonymous"
-    ></script>
+  ></script>
+  <script src="main.js" defer></script>
 </head>
 <body>
     <nav class="navbar">
-        <div class="navbar__logo">
-          <i class="fab fa-accusoft"></i>
-          <a href="">seunghwa</a>
-        </div>
+      <div class="navbar__logo">
+        <i class="fab fa-accusoft"></i>
+        <a href="">seunghwa</a>
+      </div>
 
-        <ul class=".navbar__menu">
-            <li><a href="">Home</a></li>
-            <li><a href="">Gallery</a></li>
-            <li><a href="">Weddings</a></li>
-            <li><a href="">FAQ</a></li>
-            <li><a href="">Bookings</a></li>
-        </ul>
+      <ul class=".navbar__menu">
+        <li><a href="">Home</a></li>
+        <li><a href="">Gallery</a></li>
+        <li><a href="">Weddings</a></li>
+        <li><a href="">FAQ</a></li>
+        <li><a href="">Bookings</a></li>
+      </ul>
 
         <ul class=".navbar__icons">
-            <li><i class="fab fa-instagram"></i></li>
-            <li><i class="fab fa-youtube"></i></li>
+          <li><i class="fab fa-instagram"></i></li>
+          <li><i class="fab fa-youtube"></i></li>
         </ul>
+
+        <a href="#" class="navbar__toogleBtn">
+            <i class="fas fa-bars"></i>
+        </a>
     </nav>
 
 </body>
